chore(CI): cache the store

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,14 @@ node_js:
   - 4
   - 6
   - 7
+
+cache:
+  directories:
+    - ~/.store
+
 sudo: false
 before_install:
-  - npm install -g pnpm
+  - npm install -g @zkochan/pnpm
 install:
   - pnpm install
 script:
